Closed Bug 488068 Opened 16 years ago Closed 16 years ago

ImmReleaseContext should be called for opened HIMC

Categories

(Core :: Widget: Win32, defect)

ARM
Windows Mobile 6 Professional
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: ashie, Assigned: ashie)

Details

(Keywords: mobile)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; ja; rv:1.9.0.4) Gecko/2008102920 Firefox/3.0.4 (.NET CLR 3.5.30729) Build Identifier: ImmReleaseContext() should be called for opened HIMC http://msdn.microsoft.com/en-us/library/aa913790.aspx But there are some places it isn't called on WinCE specific code. https://hg.mozilla.org/mozilla-central/file/07599e2b0941/widget/src/windows/nsWindow.cpp#l4636 I'll attach a patch. Reproducible: Always
OS: Other → Windows Mobile 6 Professional
Product: Fennec → Core
Hardware: Other → ARM
A patch to plug leaked HIMC.
Attachment #372352 - Flags: review?(bugmail)
Component: General → Widget: Win32
QA Contact: general → win32
Attachment #372352 - Flags: review?(bugmail) → review?(doug.turner)
Comment on attachment 372352 [details] [diff] [review] Plug leaked HIMC. looks good to me, but Doug is a widget peer
Attachment #372352 - Flags: superreview?(emaijala)
Attachment #372352 - Flags: review?(doug.turner)
Attachment #372352 - Flags: review+
Comment on attachment 372352 [details] [diff] [review] Plug leaked HIMC. Looks good, but I'm not a super-reviewer.
Attachment #372352 - Flags: superreview?(emaijala)
Attachment #372352 - Flags: superreview?(pavlov)
Attachment #372352 - Flags: superreview?(pavlov) → superreview+
Assignee: nobody → ashie
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Needs landing?
Yes, please.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: