Bug 488068 - ImmReleaseContext should be called for opened HIMC. r=pavlov, sr=dougt